# NotificationTrayIconSharp

./: .gitignore  CMakeLists.txt  LICENSE  NotificationIconSharp.sln  README.md
Demo/: Demo.csproj  Program.cs  libxammac.dylib
NotificationIconSharp/: DebugKey.snk  INativeInterop.cs  NativeInterop.cs  NotificationIcon.cs  NotificationIconSharp.csproj  NotificationManager.cs  NotificationMenuItem.cs
OSXDemo/: AppDelegate.cs  Info.plist  Main.cs  Main.storyboard  OSXDemo.csproj  ViewController.cs  ViewController.designer.cs
notification_icon/: CmakeLists.txt
notificationicon_native/: CMakeLists.txt  CMakeSettings.json  build.bat  build_osx.sh
notificationicon_native/TestAppOSX/TestApp/: main.mm
notificationicon_native/TestAppOSX/TestApp.xcodeproj/: project.pbxproj
notificationicon_native/TestAppWIN/: TestApplication.cpp  TestApplication.sln  TestApplication.vcxproj  TestApplication.vcxproj.filters
notificationicon_native/TestApplication/: TestApplication.cpp  TestApplication.vcxproj  TestApplication.vcxproj.filters
notificationicon_native/src/: CmakeLists.txt  IMenuContainer.h  ITrayIcon.h  ITrayMenuItem.cpp  ITrayMenuItem.h  NotificationTrayIcon.cpp  NotificationTrayIcon.h  common.h
notificationicon_native/src/linux/: CMakeLists.txt
notificationicon_native/src/macos/: ButtonProxy.h  CMakeLists.txt  Toast.h  Toast.mm  TrayIcon.h  TrayIcon.mm  TrayMenuItem.h  TrayMenuItem.mm
notificationicon_native/src/windows/: CMakeLists.txt  DesktopNotificationManagerCompat.cpp  DesktopNotificationManagerCompat.h  Toast.cpp  Toast.h  TrayMenuItem.cpp
(+97 files in other folders)
